FIXED(almost totally) HOLY !!!

--- a/Emily_Project/index.html
+++ b/Emily_Project/index.html
@@ -38,6 +38,6 @@
        <footer>
            Copyright Emily Wolfe 2021
        </footer>
-        <script src="script/init.js"></script>
+        <script src="script/init2.js"></script>
     </body>
 </html>
